Fixed left menu not showing all backlogs if the list was too long

--- a/webapp/src/main/webapp/static/css/structure.ui.css
+++ b/webapp/src/main/webapp/static/css/structure.ui.css
@@ -283,6 +283,9 @@ div#footerText label {
   margin-left: 2px !important;
 }
 
+#backlogMenuTree {
+  overflow: auto !important;
+}
 /**
  * SMALL BURNDOWN
  */
